data/all_generated_tests/raw_wast_tests/unreachable_UnreachableCodeExecution_1108.wast
;; 9. **Test Description:**    - **Scenario:** Place `unreachable` after an invalid arithmetic operation that shouldn’t proceed to execution.    - **Constraint Checked:** Verifies if erroneous arithmetic operations correctly lead to an `unreachable` trap.    - **Relation to Unreachable Code Execution:** Ensures bad arithmetic sequences hit an `unreachable` and trap the program.

(assert_invalid
  (module
    (func $unreachable_after_invalid_arithmetic
      i32.const 1
      i64.const 2
      i32.add
      unreachable
    )
  )
  "type mismatch"
)